# paddle

./: Cargo.toml  README.md  dumb_macros.md  test.txt
.github/workflows/: github_pages_build.yml
cli/: Cargo.toml
cli/src/: main.rs  repl.rs
cli/tests/: cli.rs
core/: Cargo.toml
core/src/: cursor.rs  lexer.rs  lib.rs  parser.rs
core/src/eval/: env.rs  eval.rs  lower.rs  mod.rs  value.rs
core/src/eval/builtins/: boolean.rs  inandout.rs  list.rs  math.rs  predicate.rs  string.rs
core/src/eval/tests/: arithmetic.rs  atoms.rs  cadr.rs  car.rs  cdr.rs  char_tests.rs  cons.rs  eq.rs  (+13 more)
core/tests/: integration.rs
core/tests/integrations/: bare.rs  comparison.rs  errors.rs  examples.rs  filter.rs  length.rs  let_forms.rs  list_accessors.rs  map.rs  mod.rs  power.rs  programs.rs  range.rs
docs/: dumb_macros.md
examples/: base.jt  base.pd  dumb_macros.pd  fact.jt  fact.pd  forth.pd  fun.pd  import.pd  macros.pd  nqueens.pd  old_macros.pd  paddle.pd  span_errors.pd  span_errors_nested.pd  sudoku.pd  swtfa.pd  wc.pd
examples/aoc_2025/: day1.pd  day2.pd
src/: cursor.rs  env.rs  eval.rs  lexer.rs  lib.rs  main.rs  math.rs  parser.rs  repl.rs  split_keeping_delimiter.rs
src/eval/: env.rs  eval.rs  lower.rs  mod.rs  tests.rs  value.rs
src/eval/tests/: addition.rs  builtin_errors.rs  car.rs  cdr.rs  division.rs  empty.rs  env.rs  eval_errors.rs  evalenv.rs  evalif.rs  lambda.rs  list.rs  macros.rs  mod.rs  multiplication.rs  nesting.rs  quote.rs  subtraction.rs  variadic.rs
tests/: integration.rs
wasm/: Cargo.toml  index.html  styles.css
wasm/src/: lib.rs
