[package]
name = "paddle"
description = "A simple LISP interpreter"
version = "0.2.0"
edition = "2024"

[dependencies]
paddle_core = { path = "../core" }
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
rustyline = "18.0.0"
thiserror = "2.0.18"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
